Updated Swagger spec, changed byMonth model
