# cloud_functions/openapi-functions-staging.yaml
@@ -95,7 +95,7 @@ paths:
   /v1/carbon_intensity/average/year/{utility}:
     get:
       summary: Average Intensity for each hour of the day, across a given breakdown. Based on historical data for a given utility.
-      operationId: average_intensity_breakdown
+      operationId: average_intensity_breakdown_year
       parameters:
         - $ref: "#/parameters/utility"
       responses:
@@ -108,23 +108,29 @@ paths:
                 type: object
                 properties:
                   carbon_intensity_average:
-                    type: object
-                    properties:
-                      breakdown:
-                        type: string
-                        example: "year"
-                      data:
-                        type: array
-                        items:
-                          type: object
-                          properties:
-                            year:
-                              type: integer
-                              example: 2020
-                            data:
-                              type: array
-                              items:
-                                $ref: "#/definitions/averageCarbonIntensityForDay"
+                    $ref: "#/definitions/averageBreakdownYear"
+              fromCache:
+                type: boolean
+        "400":
+          description: Invalid Utility Specified
+
+  /v1/carbon_intensity/average/month/{utility}:
+    get:
+      summary: Average Intensity for each hour of the day, across a given breakdown. Based on historical data for a given utility.
+      operationId: average_intensity_breakdown_month
+      parameters:
+        - $ref: "#/parameters/utility"
+      responses:
+        "200":
+          description: Average carbon intensity for a given day. Hours go from 0-23.
+          schema:
+            type: object
+            properties:
+              data:
+                type: object
+                properties:
+                  carbon_intensity_average:
+                    $ref: "#/definitions/averageBreakdownMonth"
               fromCache:
                 type: boolean
         "400":
@@ -141,6 +147,47 @@ definitions:
         type: number
         example: 674.2050851161346
 
+  averageBreakdownMonth:
+    type: object
+    properties:
+      breakdown:
+        type: string
+        enum: ["month"]
+      data:
+        type: array
+        items:
+          type: object
+          properties:
+            month:
+              type: integer
+              example: 1
+            data:
+              type: array
+              items:
+                $ref: "#/definitions/averageCarbonIntensityForDay"
+
+  averageBreakdownYear:
+    type: object
+    discriminator: breakdownYear
+    required:
+      - breakdownYear
+    properties:
+      breakdown:
+        type: string
+        enum: ["year"]
+      data:
+        type: array
+        items:
+          type: object
+          properties:
+            year:
+              type: integer
+              example: 2020
+            data:
+              type: array
+              items:
+                $ref: "#/definitions/averageCarbonIntensityForDay"
+
 parameters:
   utility:
     in: path
@@ -148,4 +195,14 @@ parameters:
     type: string
     required: true
     description: String of the utility to get information for
-    pattern: ^cepco|chuden|hepco|kepco|kyuden|okiden|rikuden|tepco|tohokuden|yonden$
+    enum:
+      - tepco
+      - tohokuden
+      - kepco
+      - chuden
+      - hepco
+      - rikuden
+      - cepco
+      - yonden
+      - kyuden
+      - okiden
